[metadata]
name = moto-tools-by-sporniket
version = 0.0.2
author = Sporniket
author_email = sporniket.studio@gmail.com
description = A python library with a set of command line interfaces that will assist a developper of software running on emulators of the family of computers made by Thomson during the 1980s, models "MO" and models "TO".
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sporniket/moto-tools
project_urls =
    Bug Tracker = https://github.com/sporniket/moto-tools/issues
classifiers =
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Development Status :: 3 - Alpha
    Environment :: Console

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    moto_tar = moto_tar:main
    moto_nl = moto_nl:main
    moto_bas2lst = moto_bas2lst:main
    moto_lst2bas = moto_lst2bas:main
    